k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sre-microservice
  labels:
    name: sre-microservice
    environment: production
